--- a/src/test/ressources/application.properties
+++ b/src/test/ressources/application.properties
@@ -1,12 +1,11 @@
 
-spring.test.database.replace=ANY
-
 ################### DataSource Configuration ##########################
-spring.datasource.url=jdbc:h2:mem:test;MODE=Mysql
-spring.datasource.driverClassName=org.h2.Driver
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+spring.datasource.username=sa
+spring.datasource.password=
+hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 ################### Hibernate Configuration ##########################
-spring.jpa.hibernate.ddl-auto=create
+hibernate.hbm2ddl.auto=create
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
