--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,11 @@
 			<version>0.8.7</version>
 			<type>maven-plugin</type>
 		</dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 	<build>
 		<plugins>
